# InProMP_scaraIROS

./: README.md
graspberry_perception/: CMakeLists.txt  package.xml  setup.py
graspberry_perception/launch/: camera_publisher.launch  readme.txt  test.launch
graspberry_perception/msg/: BoundingBox.msg  LabelledImage.msg  ObjectAnnotation.msg  ObjectDescription.msg  ObjectDetection.msg
graspberry_perception/realsense-ros/realsense2_camera/launch/: demo_pointcloud.launch
graspberry_perception/realsense-ros/realsense2_camera/rviz/: pointcloud2.rviz
graspberry_perception/realsense-ros/realsense2_description/launch/: view_d435_model.launch
graspberry_perception/src/deep_learning_ros/: get_detections_for_topic.py
graspberry_perception/src/deep_learning_ros/compatibility_layer/: detection_server.py  python3_fixes.py  registry.py
graspberry_perception/src/detector_2d/: detector_2d.py
graspberry_perception/src/graspberry_perception_pkg/: detection.py  dynamic_reconfigure.py  message.py  utility.py  visualisation.py
graspberry_perception/src/process_pcl/: Justin_straw.py  Justin_straw_old_2adjust.py  copy_pointcloud_annotated.pcd  pcl_processing.py
graspberry_perception/src/process_pcl/annotated_straw/: pointcloud_annotated.ply  pointcloud_color.ply
graspberry_perception/src/process_pcl/annotated_straw/single_cloud_out/: straw1.ply  straw10.ply  straw11.ply  straw12.ply  straw13.ply  straw14.ply  straw15.ply  straw16.ply  straw17.ply  straw18.ply  straw19.ply  straw2.ply  straw3.ply  straw4.ply  straw5.ply  straw6.ply  straw7.ply  straw8.ply  straw9.ply
(+110 files in other folders)
