<?xml version="1.0"?>
<package format="2">
  <name>graspberry_perception</name>
  <version>0.0.0</version>
  <description>The graspberry_perception package</description>

  <maintainer email="rkirk@lincoln.ac.uk">raymond</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>realsense2_camera</build_depend>
  <build_depend>ros_numpy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>bayes_people_tracker</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>realsense2_camera</build_export_depend>
  <build_export_depend>ros_numpy</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>ros_numpy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>bayes_people_tracker</exec_depend>

  <export>
  </export>
</package>